# image_processing_node

./: .gitignore  Dockerfile  LICENSE  README.md  entrypoint.sh  package.xml  setup.cfg  setup.py
image_processing_node/: image_processing_node.py
launch/: image_processing_node.launch.py
